--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<title>Enemy Fire</title>
+		<link href='https://fonts.googleapis.com/css?family=Gugi' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 		<script src="Guido.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Sweet Smiles in the Aftermath</h1>
 		</header>
 			<section id="content">
 				<canvas id="Minesweeper" data-processing-sources="Minesweeper.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Not an Apology
 	    </footer>
 	</body>
 </html>
